# ksc-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  mcp.py  settings.py
app/ksc/: models.py  service.py
app/tests/: conftest.py  test_models.py  test_service.py
specs/01-initial-release/: spec.md
src/server/: main.py  models.py  settings.py
src/server/ksc/: errors.py  service.py
src/server/tools/: groups.py  hosts.py  tasks.py
tests/: conftest.py  test_integration.py  test_service.py
