[project]
name = "ksc-mcp"
version = "0.1.0"
description = "MCP Server for Kaspersky Security Center"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0", # kept safe minimum, though latest is 0.128.0
    "mcp>=1.25.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "anyio>=4.12.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "KlAkOAPI @ file:///c:/Users/M7md/projects/ksc-mcp/packages/KlAkOAPI-15.1/KlAkOAPI-1.0.0.0"
]

[project.scripts]
ksc-mcp = "src.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["packages", ".enc", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
fixable = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
